# citk

./: .buildinfo  .gitignore  README.md  TODO.md  causallearnex.py  changelog.html  contributing.html  documentation_plan.md  environment.yml  genindex.html  index.html  instructions.md  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: docs.yml  sphinx-deploy.yml
_sources/: changelog.md.txt  index.rst.txt
_sources/api/: citk.tests.base.rst.txt
_sources/tests/: crit_test.md.txt  fisher_z_test.md.txt  g_sq_test.md.txt  spearman.md.txt
api/: citk.html  citk.tests.base.html  citk.tests.html  modules.html
citk/tests/: __init__.py  adapter_tests.py  base.py  contingency_table_tests.py  extended_tests.py  external_repo_tests.py  kernel_tests.py  ml_based_tests.py  nearest_neighbor_tests.py  partial_corr.py  partial_correlation_tests.py  r_based_tests.py  regression_tests.py  simple_tests.py  statistical_model_tests.py  (+1 more)
docs/: .buildinfo  Makefile  genindex.html  index.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js
examples/: run_all_continuous_tests.py
guides/: choosing_a_test.html  installation.html  interpreting_results.html  quickstart.html
notebooks/: fisherz.ipynb
tests/: chi_sq_test.html  crit_test.html  dml_test.html  edml_test.html  fisher_z_test.html  g_sq_test.html  index.html  kci_test.html  logit_test.html  poisson_test.html  random_forest_test.html  regression_test.html  spearman.html  test_ci_smoke.py
theory/: taxonomy_of_tests.html  what_is_ci.html
(+37 files in other folders)
