[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "citk"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A toolkit for robust conditional independence testing in causal discovery."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "pingouin",
    "causal-learn",
    # Add other dependencies like pandas, scikit-learn as needed
]

[tool.setuptools.packages.find]
where = ["."]
